--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 .skip-to-content {
   position: absolute;
   top: -100px;
@@ -232,7 +236,7 @@ ul {
 .hero__subtitle {
   font-size: 32px;
   font-weight: 500;
-  line-height: 35px;
+  line-height: 41px;
   color: #ffffff;
   max-width: 575px;
   letter-spacing: 0.64px;
@@ -935,6 +939,16 @@ ul {
   font-weight: 400;
   line-height: 30px;
   color: rgba(15, 15, 15, 0.8);
+}
+.resources .learn-more {
+  margin-top: 24px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  color: rgba(15, 15, 15, 0.8);
+}
+.resources .learn-more a {
+  text-decoration: underline;
 }
 
 .contact {
