--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,6 +84,9 @@ ul {
   overflow: hidden;
   background-color: #ffffff;
 }
+.hero * {
+  transition: all 0.3s ease;
+}
 @media (max-width: 768px) {
   .hero {
     min-height: 600px;
@@ -130,13 +133,23 @@ ul {
 }
 .hero__color-overlay {
   position: absolute;
-  top: 0;
+  top: -180px;
   left: 0;
-  width: 100%;
-  height: 100%;
-  left: 70px;
+  height: 170%;
+  width: auto;
   object-fit: cover;
-  object-position: center;
+  object-position: bottom left;
+}
+@media screen and (min-width: 1212px) {
+  .hero__color-overlay {
+    left: 5%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .hero__color-overlay {
+    height: 200%;
+    top: -200px;
+  }
 }
 @media (max-width: 768px) {
   .hero__color-overlay {
@@ -148,37 +161,39 @@ ul {
   object-fit: cover;
   z-index: 3;
   border-radius: 0;
-}
-.hero__image--left {
-  width: 400px;
+  width: 34%;
   height: auto;
-  left: 0;
-  bottom: 0;
+  max-width: 400px;
 }
-@media (max-width: 768px) {
-  .hero__image--left {
+@media (max-width: 1080px) {
+  .hero__image {
     width: 55%;
-    height: auto;
-    left: -10%;
-    bottom: 0;
     top: auto;
     transform: none;
   }
 }
+@media (max-width: 768px) {
+  .hero__image {
+    width: 58%;
+    max-width: 284px;
+  }
+}
+.hero__image--left {
+  left: 0;
+  bottom: 0;
+}
+@media (max-width: 1080px) {
+  .hero__image--left {
+    left: -10%;
+  }
+}
 .hero__image--right {
-  width: 400px;
-  height: auto;
   right: -20px;
   bottom: 0;
 }
-@media (max-width: 768px) {
+@media (max-width: 1080px) {
   .hero__image--right {
-    width: 55%;
-    height: auto;
     right: -10%;
-    bottom: 0;
-    top: auto;
-    transform: none;
   }
 }
 .hero__content {
