--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1017,12 +1017,22 @@ ul {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  height: 120%;
+  width: auto;
   object-fit: cover;
   object-position: center;
   z-index: 2;
   mix-blend-mode: multiply;
+}
+@media screen and (min-width: 768px) {
+  .contact__shape-overlay {
+    left: -10%;
+  }
+}
+@media screen and (min-width: 1700px) {
+  .contact__shape-overlay {
+    left: 0;
+  }
 }
 @media (max-width: 768px) {
   .contact__shape-overlay {
