--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1102,8 +1102,23 @@ ul {
   margin-bottom: 32px;
 }
 .contact__description a {
+  position: relative;
   display: inline-block;
   line-height: 1.3;
+}
+.contact__description a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #ffffff;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+.contact__description a:hover::after {
+  transform: scaleX(1);
 }
 .contact__button {
   display: inline-flex;
