--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1223,8 +1223,25 @@ ul {
     margin-bottom: $spacing-lg;
 
     a {
+      position: relative;
       display: inline-block;
       line-height: 1.3;
+
+      &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: $color-white;
+        transform: scaleX(0);
+        transition: transform 0.3s ease;
+      }
+
+      &:hover::after {
+        transform: scaleX(1);
+      }
     }
   }
 
