--- a/src/styles.scss
+++ b/src/styles.scss
@@ -443,6 +443,7 @@ ul {
       align-items: center;
       height: 57px;
       padding: 0 $spacing-md;
+      margin: 0 auto;
       gap: 12px;
       cursor: pointer;
       background: none;
