fix hero on largest width

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,10 +145,10 @@ ul {
     left: 5%;
   }
 }
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1500px) {
   .hero__color-overlay {
-    height: 200%;
-    top: -200px;
+    width: 200%;
+    top: 0;
   }
 }
 @media (max-width: 768px) {
