--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,7 +80,7 @@ ul {
 .hero {
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: calc(100vh - 57px);
   overflow: hidden;
   background-color: #ffffff;
 }
@@ -165,6 +165,11 @@ ul {
   height: auto;
   max-width: 400px;
 }
+@media screen and (max-height: 800px) {
+  .hero__image {
+    display: none;
+  }
+}
 @media (max-width: 1080px) {
   .hero__image {
     width: 55%;
@@ -212,7 +217,7 @@ ul {
 @media (max-width: 768px) {
   .hero__content {
     justify-content: flex-start;
-    padding-top: 100px;
+    padding-top: 50px;
   }
 }
 .hero__logo {
