--- a/src/styles.scss
+++ b/src/styles.scss
@@ -158,7 +158,7 @@ ul {
 .hero {
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: calc(100vh - 57px);
   overflow: hidden;
   background-color: $color-white;
 
@@ -231,6 +231,10 @@ ul {
     height: auto;
     max-width: 400px;
 
+    @media screen and (max-height: 800px) {
+      display: none;
+    }
+
     @include respond-to($breakpoint-tablet) {
       width: 55%;
       top: auto;
@@ -274,7 +278,7 @@ ul {
 
     @include respond-to($breakpoint-mobile) {
       justify-content: flex-start;
-      padding-top: 100px;
+      padding-top: 50px;
     }
   }
 
