--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -942,7 +942,7 @@ ul {
 .resources__list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 32px;
+  column-gap: 32px;
   margin-left: -24px;
 }
 @media (max-width: 768px) {
@@ -975,7 +975,7 @@ ul {
   color: rgba(15, 15, 15, 0.8);
 }
 .resources .learn-more {
-  margin-top: 24px;
+  margin-top: 32px;
   font-size: 18px;
   font-weight: 400;
   line-height: 30px;
